# django-snacks

./: README.md  pyproject.toml
snacks_project/: db.sqlite3  manage.py
snacks_project/home/migrations/: 0001_initial.py  0002_delete_home.py
snacks_project/snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks_project/snacks/migrations/: 0001_initial.py  0002_auto_20211206_1204.py
snacks_project/snacks_project/: settings.py  urls.py
snacks_project/templates/: _base.html  aboutUs.html  create_snack.html  delete_snack.html  home.html  snack_detail.html  snack_list.html  update_snack.html
