[tool.poetry]
name = "django-snacks"
version = "0.1.0"
description = ""
authors = ["yousef-alramli <ysabdys1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
black = "^21.11b1"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
